# cliser

./: Cargo.toml  Dockerfile  Especif.txt  README.md  agent.rs  casaos.txt  config.json  configcli.json  especif  sensorDS1820  serv_config.json
Docs/: ManualAgent.odt  ManualClient.odt  ManualComandoAgent.odt  ManualComandoBackdoor.odt  ManualServer.odt  agent.odt
src/: client.rs  main.rs  server.rs
src/client/: config.rs  implconfig.rs
src/server/: clientdata.rs
src/servermod/: clientdata.rs  config.rs  mod.rs
