[package]
name = "cliser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
syslog = "7.0.0"
log = "0.4"
libc = "0.2"
hostname = "0.4"
ctrlc = "3.4"
lazy_static = "1.4"
rppal = "0.22.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
csv = "1.1"
chrono = "0.4"
simple_logger = "4.0"
